# reportpp

./: CMakeLists.txt  README.md
include/: ReportGen.hpp  ReportGlobals.hpp
include/executor/: BlockExecutor.hpp  DataPageExecutor.hpp
include/operation/: GMode.hpp  Rectangle.hpp
include/reportpp/: PageBlock.hpp  Report.hpp  ReportGen.hpp  ReportGlobals.hpp  ReportPage.hpp
include/reportpp/executor/: BlockExecutor.hpp  DataPageExecutor.hpp  PageExecutor.hpp
include/reportpp/operation/: GMode.hpp  LineTo.hpp  Operation.hpp  Rectangle.hpp  Stroke.hpp
include/reportpp/operation/page/: SetHeight.hpp  SetSize.hpp  SetWidth.hpp
include/reportpp/parser/: PageFormat.hpp  Report.hpp  ReportPage.hpp  ReportPageParser.hpp
include/reportpp/support/: Callers.hpp
include/reportpp/templates/operation/: Operation.hpp
include/reportpp/types/: Graphics.hpp  PageFormat.hpp  ReportPage.hpp
src/: Report.cpp  ReportGen.cpp  ReportPage.cpp  ReportPageParser.cpp
src/parser/: PageBlock.cpp  PageFormat.cpp  Report.cpp  ReportPage.cpp  ReportPageParser.cpp
src/types/: PageFormatParser.cpp  PageFormatParser.hpp  types_writer.cpp
test/: test1.xml
test/generator-test/: CMakeLists.txt  Makefile  main.cpp
test/src/: reportpp-driver.cxx  reportpp-pimpl.cxx  reportpp-pimpl.hxx
xml-schema/: Makefile  reportpp.xsd  types.map
xml-schema/include/operations/: Operation.hpp  Rectangle.hpp
xml-schema/include/types/: Graphics.hpp  PageFormat.hpp
